name:                prepare
version:             0.1.0.0
description:         Preparation tools for populating DDB
license:             AllRightsReserved
author:              Alex Babkin
maintainer:          ababkin@gmail.com
build-type:          Simple
cabal-version:       >=1.8

executable generate-customers
  hs-source-dirs: src
  main-is:        GenerateCustomers.hs
  ghc-options:    
    -static 
    -Wall 
    -threaded 
    -O2
    -rtsopts
    "-with-rtsopts=-N"
  buildable: True
  build-depends:
      base
    , text
    , mtl
    , transformers
    , aeson
    , bytestring
    , containers
    , aws

executable populate-products
  hs-source-dirs: src
  main-is:        PopulateProducts.hs
  ghc-options:    
    -static 
    -Wall 
    -threaded 
    -O2
    -rtsopts
    "-with-rtsopts=-N"
  buildable: True
  build-depends:
      base
    , text
    , mtl
    , transformers
    , aeson
    , bytestring
    , containers
    , aws

executable populate-rules
  hs-source-dirs: src
  main-is:        PopulateRules.hs
  ghc-options:    
    -static 
    -Wall 
    -threaded 
    -O2
    -rtsopts
    "-with-rtsopts=-N"
  buildable: True
  build-depends:
      base
    , text
    , mtl
    , transformers
    , aeson
    , bytestring
    , containers
    , aws

executable populate-product-rules
  hs-source-dirs: src
  main-is:        PopulateProductRules.hs
  ghc-options:    
    -static 
    -Wall 
    -threaded 
    -O2
    -rtsopts
    "-with-rtsopts=-N"
  buildable: True
  build-depends:
      base
    , text
    , mtl
    , transformers
    , aeson
    , bytestring
    , containers
    , aws

executable apply-rules
  hs-source-dirs: src
  main-is:        ApplyRules.hs
  ghc-options:    
    -static 
    -Wall 
    -threaded 
    -O2
    -rtsopts
    "-with-rtsopts=-N"
  buildable: True
  build-depends:
      base
    , text
    , mtl
    , transformers
    , aeson
    , bytestring
    , containers
    , aws
    , vector
    , either-unwrap
